Erik Odin exercises 1-13 with comments

--- a/10_fibonacci/fibtest.html
+++ b/10_fibonacci/fibtest.html
@@ -1,6 +1,15 @@
-
-// fibonacci! 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89,144,233,377,610,987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229
-const fibonacci = function(fibCount) {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<!-- fibonacci! 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89,144,233,377,610,987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229-->
+    <script>
+function fibonacci(fibCount){
   //convert to Integer
   fibCount = parseInt(fibCount);
     // No negative numbers allowed
@@ -27,6 +36,8 @@ const fibonacci = function(fibCount) {
     console.log(fib2);
     return fib2;
 };
+console.log(fibonacci(25));
 
-// Do not edit below this line
-module.exports = fibonacci;
+    </script>
+</body>
+</html>
