--- a/09_palindromes/testhtmlpage.html
+++ b/09_palindromes/testhtmlpage.html
@@ -1,4 +1,14 @@
-const palindromes = function (strPal) {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+function isPal(strPal) {
         // convert to lowercase and remove spaces
         strPal=strPal.toLowerCase().replace(/\s/g, '');
         // remove punctuation from string
@@ -24,7 +34,9 @@ const palindromes = function (strPal) {
             return false;
         }
     };
-    
+isPal("boogeyman"); // racecar
 
-// Do not edit below this line
-module.exports = palindromes;
+
+    </script>
+</body>
+</html>
